--- a/package.json
+++ b/package.json
@@ -37,7 +37,11 @@
     "@radix-ui/react-toggle": "1.1.1",
     "@radix-ui/react-toggle-group": "1.1.1",
     "@radix-ui/react-tooltip": "1.1.6",
+    "@semaphore-protocol/group": "^4.13.1",
+    "@semaphore-protocol/identity": "^4.13.1",
+    "@semaphore-protocol/proof": "^4.13.1",
     "@vercel/analytics": "1.3.1",
+    "@zk-email/sdk": "^2.0.6",
     "autoprefixer": "^10.4.20",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
