--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "cmdk": "1.0.4",
     "date-fns": "4.1.0",
     "embla-carousel-react": "8.5.1",
+    "eslint": "^9.38.0",
     "ethers": "^6.15.0",
     "geist": "^1.3.1",
     "input-otp": "1.4.1",
